--- a/index.html
+++ b/index.html
@@ -8,14 +8,39 @@
 </head>
 <body>
     <main>
-        <section class="backgroundConfig conteiner">
-            <div>
+        <section class="conteiner primary">
+            <div class="conteiner__box">
                 <h1 class="conteiner__title">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-                <img src="AluraComboPlus/combo.png" alt="COMBO+">
+                <img src="AluraComboPlus/combo.png" alt="COMBO+" class="conteiner__picture">
                 <a class="conteiner__button" href="http://www.alura.com.br">Assine por 12x de R$ 120,00*</a>
                 <a class="conteiner__button conteiner__button__secundary" href="http://">Assinar somente o Alura+</a>
                 <p class="conteiner__warning">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
             </div>
+        </section>
+
+        <section class="conteiner secundary">
+            <img src="/aluraComboPlus/cellAndPc.png" alt="celular e pc abertos na pagina do alura" class="secundary__picture">
+            <div>
+                <h2 class="conteiner__description__title">Assista do seu jeito</h2>
+                <p>Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+            </div>
+        </section>
+
+        <section class="conteiner tertiary">
+            <div class="conteiner__description">
+                <p>Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
+                <a href="" class="conteiner__button tertiary__button">Assine o Combo+</a>
+            </div>
+            <img src="/aluraComboPlus/aluraPlusAluraLingua.png" alt="imagem alura lingua e alura plus" class="tertiary__screens">
+
+        </section class = "conteiner quaternary">
+            <div>
+                <h2>Baixe seus cursos</h1>
+                <p>Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
+            </div>
+            <img src="/aluraComboPlus/pageOneNetBook.png" alt="" class="quarternary__picture">
+        <section>
+
         </section>
     </main>
     <footer></footer>
