--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section class="conteiner secundary">
             <img src="/aluraComboPlus/cellAndPc.png" alt="celular e pc abertos na pagina do alura" class="secundary__picture">
             <div>
-                <h2 class="conteiner__description__title">Assista do seu jeito</h2>
+                <h2 class="conteiner__subtitles">Assista do seu jeito</h2>
                 <p>Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
             </div>
         </section>
@@ -32,17 +32,64 @@
                 <a href="" class="conteiner__button tertiary__button">Assine o Combo+</a>
             </div>
             <img src="/aluraComboPlus/aluraPlusAluraLingua.png" alt="imagem alura lingua e alura plus" class="tertiary__screens">
+        </section>
 
-        </section class = "conteiner quaternary">
-            <div>
-                <h2>Baixe seus cursos</h1>
+        <section class = "conteiner quaternary">
+            <img src="/aluraComboPlus/pageOneNetBook.png" alt="" class="quarternary__picture">
+            <div class="quarternary__div">
+                <h2 class="conteiner__subtitles">Baixe seus cursos</h1>
                 <p>Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
             </div>
-            <img src="/aluraComboPlus/pageOneNetBook.png" alt="" class="quarternary__picture">
-        <section>
-
+        </section>
+        <section class="devices">
+            <h2 class="conteiner__subtitles">Disponível nos seus dispositivos favoritos</h2>
+            <ul class="devices__types">
+                <li>
+                    <img class="devices__pictures" src="/aluraComboPlus/tv.png" alt="tv modelo">
+                    <h3 class="devices__names">TV</h3>
+                </li>
+                <li>
+                    <img class="devices__pictures" src="/aluraComboPlus/computer.png" alt="computador modelo">
+                    <h3 class="devices__names">Computadores</h3>
+                </li>
+                <li>
+                    <img class="devices__pictures" src="/aluraComboPlus/cellPhone.png" alt="celular e tablet modelo">
+                    <h3 class="devices__names">Celulares e tablets</h3>
+                </li>
+            </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <img src="aluraComboPlus/aluraPlus.png" alt="Alura+" class="footer__picture">
+        <ul class="footer__list">
+            <li class="footer__links">
+                <a href="#" class="footer__link">Idioma</a>
+            </li>
+            <li class="footer__links">
+                <a href="#" class="footer__link">Dispositivos compatíveis</a>
+            </li>
+            <li class="footer__links">
+                <a href="#" class="footer__link">Contrato de assinatura</a>
+            </li>
+            <li class="footer__links">
+                <a href="#" class="footer__link">Politica de privacidade</a>
+            </li>
+            <li class="footer__links">
+                <a href="#" class="footer__link">Proteção de dados no Brasil</a>
+            </li>
+            <li class="footer__links">
+                <a href="#" class="footer__link">Anuncios personalizados</a>
+            </li>
+            <li class="footer__links">
+                <a href="#" class="footer__link">Ajuda</a>
+            </li>
+        </ul>
+        <p class="footer__text">
+            ® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.
+        </p>
+        <p class="footer__text">
+            Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A.<br>, Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33
+        </p>
+    </footer>
 </body>
 </html>
