--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </section>
 
         <section class="conteiner secundary">
-            <img src="/aluraComboPlus/cellAndPc.png" alt="celular e pc abertos na pagina do alura" class="secundary__picture">
+            <img src="aluraComboPlus/cellAndPc.png" alt="celular e pc abertos na pagina do alura" class="secundary__picture">
             <div>
                 <h2 class="conteiner__subtitles">Assista do seu jeito</h2>
                 <p>Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
@@ -31,11 +31,11 @@
                 <p>Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
                 <a href="" class="conteiner__button tertiary__button">Assine o Combo+</a>
             </div>
-            <img src="/aluraComboPlus/aluraPlusAluraLingua.png" alt="imagem alura lingua e alura plus" class="tertiary__screens">
+            <img src="aluraComboPlus/aluraPlusAluraLingua.png" alt="imagem alura lingua e alura plus" class="tertiary__screens">
         </section>
 
         <section class = "conteiner quaternary">
-            <img src="/aluraComboPlus/pageOneNetBook.png" alt="" class="quarternary__picture">
+            <img src="aluraComboPlus/pageOneNetBook.png" alt="" class="quarternary__picture">
             <div class="quarternary__div">
                 <h2 class="conteiner__subtitles">Baixe seus cursos</h1>
                 <p>Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
@@ -45,15 +45,15 @@
             <h2 class="conteiner__subtitles">Disponível nos seus dispositivos favoritos</h2>
             <ul class="devices__types">
                 <li>
-                    <img class="devices__pictures" src="/aluraComboPlus/tv.png" alt="tv modelo">
+                    <img class="devices__pictures" src="aluraComboPlus/tv.png" alt="tv modelo">
                     <h3 class="devices__names">TV</h3>
                 </li>
                 <li>
-                    <img class="devices__pictures" src="/aluraComboPlus/computer.png" alt="computador modelo">
+                    <img class="devices__pictures" src="aluraComboPlus/computer.png" alt="computador modelo">
                     <h3 class="devices__names">Computadores</h3>
                 </li>
                 <li>
-                    <img class="devices__pictures" src="/aluraComboPlus/cellPhone.png" alt="celular e tablet modelo">
+                    <img class="devices__pictures" src="aluraComboPlus/cellPhone.png" alt="celular e tablet modelo">
                     <h3 class="devices__names">Celulares e tablets</h3>
                 </li>
             </div>
