--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <section class="conteiner primary">
             <div class="conteiner__box">
                 <h1 class="conteiner__title">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-                <img src="AluraComboPlus/combo.png" alt="COMBO+" class="conteiner__picture">
+                <img src="aluraComboPlus/combo.png" alt="COMBO+" class="conteiner__picture">
                 <a class="conteiner__button" href="http://www.alura.com.br">Assine por 12x de R$ 120,00*</a>
                 <a class="conteiner__button conteiner__button__secundary" href="http://">Assinar somente o Alura+</a>
                 <p class="conteiner__warning">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
